force-app/main/default/objects/iManageDocumentMetadata__c/iManageDocumentMetadata__c.object-meta.xml
<CustomObject>
    <label>iManage Document Metadata</label>
    <nameField>
        <label>iManage Document Metadata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iManage Documents Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>