force-app/main/default/objects/iManageDocumentMetadata__c/fields/DocNumber__c.field-meta.xml
<CustomField>
    <fullName>DocNumber__c</fullName>
    <description>iManage Document Number</description>
    <label>Document Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>