force-app/main/default/objects/iManageDocumentMetadata__c/fields/Document_Author__c.field-meta.xml
<CustomField>
    <fullName>Document_Author__c</fullName>
    <description>iManage Document Author</description>
    <label>Document Author</label>
    <length>255</length>
    <type>Text</type>
</CustomField>