force-app/main/default/objects/iManageDocumentMetadata__c/fields/Document_Class__c.field-meta.xml
<CustomField>
    <fullName>Document_Class__c</fullName>
    <description>iManage Document Class</description>
    <label>Document Class</label>
    <length>20</length>
    <type>Text</type>
</CustomField>