force-app/main/default/objects/iManageDocumentMetadata__c/fields/Document_SubClass__c.field-meta.xml
<CustomField>
    <fullName>Document_SubClass__c</fullName>
    <description>iManage Document SubClass</description>
    <label>Document SubClass</label>
    <length>20</length>
    <type>Text</type>
</CustomField>