force-app/main/default/objects/iManageDocumentMetadata__c/fields/Document_Version__c.field-meta.xml
<CustomField>
    <fullName>Document_Version__c</fullName>
    <description>iManage Document Version</description>
    <label>Document Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>